--- a/er/10-recommendations.adoc
+++ b/er/10-recommendations.adoc
@@ -1,20 +1,50 @@
 [[Issues_Recommendations]]
 == Issues and Recommendations for Future Work.
 
-=== Introduction
-**High level summary of the kinds of issues we found and what future work the IE implies**
+The results of ELFIE are quite promising in that all major issues encountered are well known and subject of ongoing work. Technologies tested, where mature and well used, worked well for the purpose and it seems that the future for an easily adoptable resource oriented linked web of data resources is bright. The following sections outline issues encountered and describe recommended prospective path forward to overcome them.
 
 === OGC Service Standards and Implementation issues.
-**WFS issues and recs for WFS3**
+OGC service interfaces were not the primary focus of ELFIE. However, along the way, both WFS and SOS services were discussed and tested. The major issues encountered is around querying these services by feature identifier. There is something of a chicken and egg situation in that, in most cases, http feature identifiers have not been published so are not available to use to query a web service, but the OGC services also don’t lend themselves to publishing feature identifiers. 
+
+If queries to WFS or SOS services are used as un-structured links that return representations of features or results of observations, they can be used readily in linked data systems. But to be used with embedded feature identifiers or with more sophisticated content-negotiated retrievals, changes to the web service APIs will be needed. 
+
+The work ongoing with WFS appears promising with regard to the issues outlined above. The ability to query by a specific id that can be an http url is supported and is a clear solution that would solve the problem illustrated here. e.g. something like: `http://server.com/wfs/getfeature?id=http://feature.x.y.x` 
+
 **SOS and SensorThings commentary?**
-**others?**
 
 === Domain Feature Model Issues
-**Availability of useful encodings / practices to generate them**
+**Availability of useful encodings / practices to generate them**  
 **Monitoring networks https://github.com/opengeospatial/ELFIE/issues/65[issue 65]**
 
 === General linked data issues
-**Default behavior for resolution of a URI -- esp. one with alternatives https://github.com/opengeospatial/ELFIE/issues/32[issue 32]**
-**Picky details of namespace URIs and identifiers https://github.com/opengeospatial/ELFIE/issues/60[issue 60]**
 
+==== Publication of URIs, Content, Types, and Associations
 
+A major issue (which was known and out of scope for ELFIE) was the lack of published feature identifiers and a linked-data baseline to build on. It is clear that, to grow the linked-data baseline, features and data linked to them need to be published using existing basic practices as a starting point. This starting point could be as trivial as a URL that returns a JSON-LD document with ID, Type, Name, and representative point location. The addition of a URI broker, content negotiation to provide HTML and RDF representations, and additional linked content would be possible given current techniques, but should not be seen as a necessary prerequisite to publishing linked data. Without a rudimentary starting point, the community has nothing to build on and could continue to debate the nuances of eventual solutions for some time.
+
+Similar to publication of features and other linked data, URLs that define feature types and relations are not available in many cases. Without these referenceable, resolvable definitions, the linked data practices described here are very difficult to use across multiple systems that need to use common types and associations. Further, even when URIs have been established, the network behavior and content received when dereferencing them is not consistent across the community. For example, https://schema.org/GeoCoordinates returns an html page by default and implements both HTTP "accept" headers (e.g. "Accept: application/ld+json") and URL suffixes (e.g. https://schema.org/GeoCoordinates.jsonld) to request specific content types and http://www.w3.org/2004/02/skos/core#related defaults to an html page and implements accept headers but does not support the same content types as schema.org and does not support URL suffixes. Other linked data URIs, those from GeoSPARQL for example (http://www.opengeospatial.org/standards/geosparql/asWKT), don't resolve anything. If the community is going to start building cross-organization solutions based on linked data, these baseline feature types and associations need to be available and well described in a common way. It should be no surprise that schema.org's linked data is used very broadly given that they provide a rich and approachable suite of content for their types and associations.
+
+[[hyf_ontology]]
+.Box {counter:boxes}: HY_Features Ontology Note
+*****
+Since the ELFIE project has completed the OGC Naming Authority has embarked upon provision of a consistent, extensive and extensible Linked Data compatible “Definitions Server” to address some of these concerns. Publication of HY_Features has been prioritized and is now available at **http://www.opengis.net/def/hy_features/ontology/hyf**
+Further experimental work is required to identify the range of different representations that can be used, such as automatic provision of JSON-LD context resources.
+*****
+
+==== Default Response When a URI has Multiple Representations
+
+Non information resource identifiers, URIs that are an identifier for a thing that may or may not have information representations, are useful to provide persistent and reusable identifiers for entities such as real-world features. These non information resource identifiers provide a means for global identification across a system such that multiple members of the system can contain information about and/or in reference to shared entities. There is a basic conundrum with non information resource identifiers in that there can only be one default response (for a given encoding) when dereferencing a URI and only one member of a distributed system can be the source of that default response. Further, in order to achieve linked system interoperability, dereferencing behavior of non information resource URIs needs to be in accord with the expectations of a member node of a system. The httpRange-14 and the Cool URIs Technical Report provide a significant basis for solving this conundrum and W3C working groups continue to focus on it, but many details remain to be agreed upon for use cases such as are being pursued by the ELFIE.
+
+While details of the default dereferencing behavior of non information resource identifiers and subsequent redirects to information resources was discussed in the ELFIE, the IE has attempted to focus on encoding of linked data information resources rather than the network behavior for discovery and retrieval of non-information resources. Future work and best practice development will be needed to address these issues:
+
+* HTTP vs HTTPS
+* embedded hints and headers to canonical identifiers vs information resources
+* permanence and bookmarkability of information resource URLs
+* detecting information resource URLs and injecting canonical URIs into systems, so that other resources can be found
+* declaration of sameAs relationships
+* where sameAs relationships are mandatory and optional - where can an agent find these?
+* stricter definition of version vs schema vs content model vs profile
+* use of expected W3C formalisms for describing profiles
+* optimal registration processes and registry provision for identifying, cataloguing , discovering and serving profiles/contexts
+* use of expected W3C/IETF mechanisms for profile negotiation in URI dereferencing
+* Adding additional dimensions of representation choice when dereferencing for geometry type, resolution, CRS etc
