--- a/er/annex-b.adoc
+++ b/er/annex-b.adoc
@@ -2,32 +2,10 @@
 [[linked_data_default]]
 === Default Response for Multiple Representions and Relations
 
-// text from wiki page.
+Non information resource identifiers, URIs that are an identifier for a thing that may or may not have information representations, are useful to provide persistent and reusable identifiers for entities such as real-world features. These non information resource identifiers provide a means for global identification across a system such that multiple members of the system can contain information about and/or in reference to shared entities.
+There is a basic conundrum with non information resource identifiers in that there can only be one default response when derefencing a URI and only one member of a distributed system can be the source of that default response. Further, in order to achieve linked system interoperability, dereferencing behavior of non information resource URIs needs to be in accord with the expectations of a member node of a system. The  https://en.wikipedia.org/wiki/HTTPRange-14[httpRange-14] and the https://www.w3.org/TR/cooluris/[Cool URIs Technical Report] provide a significant basis for solving this conundrum and https://www.w3.org/2017/dxwg[W3C working groups continue to focus on it], but many details remain to be agreed upon for use cases such as are being pursued by the ELFIE.
 
-Non information resource identifiers, URIs that are an identifier for a thing
-that may or may not have information representations, are useful to provide
-persistent and reusable identifiers for entities such as real-world features.
-These non information resource identifiers provide a means for global
-identification across a system such that multiple members of the system can
-contain information about and/or in reference to shared entities.
-
-There is a basic conundrum with non information resource identifiers in that
-there can only be one default response when derefencing a URI and only one member
-of a distributed system can be the source of that default response. Further, in
-order to achieve linked system interoperability, dereferencing behavior of non
-information resource URIs needs to be in accord with the expectations of a
-member node of a system. The https://en.wikipedia.org/wiki/HTTPRange-14[httpRange-14]
-and the https://www.w3.org/TR/cooluris/[Cool URIs Technical Report] provide a
-significant basis for solving this conundrum and https://www.w3.org/2017/dxwg[W3C
-working groups continue to focus on it], but many details remain to be agreed
-upon for use cases such as are being pursued by the ELFIE.
-
-While details of the default dereferencing behavior of non information resource
-identifiers and subsequent redirects to information resources was discussed in
-the ELFIE, the IE has attempted to focus on encoding of linked data information
-resources rather than the network behavior for discovery and retrieval of
-non-information resources. Future work and best practice development will be
-needed to address these issues:
+While details of the default dereferencing behavior of non information resource identifiers and subsequent redirects to information resources was discussed in the ELFIE, the IE has attempted to focus on encoding of linked data information resources rather than the network behavior for discovery and retrieval of non-information resources. Future work and best practice development will be needed to address these issues:
 
 . HTTP vs HTTPS
 . embedded hints and headers to canonical identifiers vs information resources
