relative link test

--- a/er/4-overview.adoc
+++ b/er/4-overview.adoc
@@ -20,7 +20,7 @@ The ELFIE has chosen to use JSON-LD as its encoding of RDF data. This was done i
 The scope of this work could have easily gotten out of control, since the Linked Data and Semantic Web itself has never fully come to grips with the issue of pragmatic limits to graph shapes, non-unique naming and content-negotiation, nor has the Web Services world addressed linking objects and granularity of responses in a distributed environment. To focus the work, the IE attempted to avoid issues not directly related to RDF encodings as would be passed from server to client via http to support the two high level abstract use cases above.
 
 === IE Summary
-The ELFIE tested the assumption that broadly adopted web technologies for linked data could be applied in the environmental domain to satisfy the needs of a number of compelling use cases. The <<Objectives>> section describes engineering design goals and details the assumptions and scope that were used to constrain the magnitude of the IE. Much of the IE involved design discussions amongst participants where candidate use cases were considered and potential technologies and implementations were explored. The <<Use_Cases>> section describes these use cases and the select set that were more thoroughly tested to evolve the technologies that were agreed upon during design discussions.  
+The ELFIE tested the assumption that broadly adopted web technologies for linked data could be applied in the environmental domain to satisfy the needs of a number of compelling use cases. The [Objectives](5-objectives.adoc) section describes engineering design goals and details the assumptions and scope that were used to constrain the magnitude of the IE. Much of the IE involved design discussions amongst participants where candidate use cases were considered and potential technologies and implementations were explored. The <<Use_Cases>> section describes these use cases and the select set that were more thoroughly tested to evolve the technologies that were agreed upon during design discussions.  
 
 The ELFIE technology selection criteria were that they be  adoptable, common, and suitable to the needs of the ELFIE use cases. In some cases new and thus lightly tested domain feature models were applied with the chosen, well established, technologies. The <<Standards_Best_Practices>> section is a brief discussion of the technologies and standards tested in the ELFIE. The technology chosen to provide a precise but not overly prescriptive description of the RDF views is the JSON-LD context. Details of the contexts defined in the ELFIE are discussed in the <<Relations_Contexts>> section.  
 
